# opendub

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  cli.py  docker-compose.yml  justfile  pyproject.toml  web.py
core/: __init__.py  downloader.py  openaudio_synthesizer.py  pipeline.py  stitcher.py  synthesizer.py  transcriber.py  translator.py
modules/synthesis/: .project-root  pyproject.toml
scripts/: start_openaudio_server.sh
